chore: 测试多项目vercel构建

--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "scripts": {
     "lint": "eslint apps --fix --ext .ts,.tsx,.js,.jsx --max-warnings 0",
-    "dev": "npm-run-all --parallel dev:front dev:backend",
-    "dev:l": "npm-run-all --parallel dev:front-l dev:backend-l",
-    "dev:front": "cd ./apps/resume-front && pnpm dev",
-    "dev:front-l": "cd ./apps/resume-front && pnpm dev:l",
-    "dev:backend": "cd ./apps/resume-backend && pnpm dev",
-    "dev:backend-l": "cd ./apps/resume-backend && pnpm dev:l",
-    "build": "npm-run-all --parallel build:frontend build:backend",
-    "build:frontend": "cd apps/resume-front && npm run build",
-    "build:backend": "cd apps/resume-backend && npm run build",
+    "dev": "npm-run-all --parallel dev:display dev:editor",
+    "dev:l": "npm-run-all --parallel dev:display-l dev:editor-l",
+    "dev:display": "cd ./apps/resume-display && pnpm dev",
+    "dev:display-l": "cd ./apps/resume-display && pnpm dev:l",
+    "dev:editor": "cd ./apps/resume-editor && pnpm dev",
+    "dev:editor-l": "cd ./apps/resume-editor && pnpm dev:l",
+    "build": "npm-run-all --parallel build:display build:editor",
+    "build:display": "cd apps/resume-display && npm run build",
+    "build:editor": "cd apps/resume-editor && npm run build",
     "prepare": "husky install",
     "commit": "git-cz",
     "lint-staged": "lint-staged",
