--- a/vercel.json
+++ b/vercel.json
@@ -6,14 +6,14 @@
       "use": "@vercel/next"
     },
     {
-      "src": "apps/resume-backend/package.json",
+      "src": "apps/resume-editor/package.json",
       "use": "@vercel/next"
     }
   ],
   "routes": [
     {
       "src": "/backend/(.*)",
-      "dest": "apps/resume-backend/$1"
+      "dest": "apps/resume-editor/$1"
     },
     {
       "src": "/(.*)",
