--- a/vercel.json
+++ b/vercel.json
@@ -12,11 +12,11 @@
   ],
   "routes": [
     {
-      "src": "/editor/(.*)",
+      "src": "/editor/(.*)?",
       "dest": "apps/resume-editor/$1"
     },
     {
-      "src": "/display/(.*)",
+      "src": "/display/(.*)?",
       "dest": "apps/resume-display/$1"
     }
   ]
